--- a/app/design/frontend/Satoshi/Hyva/Magento_Directory/templates/currency.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Directory/templates/currency.phtml
@@ -11,25 +11,45 @@ use Satoshi\Theme\Block\Template;
 
 /** @var Currency $currencyViewModel */
 $currencyViewModel = $viewModels->require(Currency::class);
+$currencies = $currencyViewModel->getCurrencies();
+$currentCurrencyCode = $currencyViewModel->getCurrentCurrencyCode();
 
 $options = [];
-foreach ($currencyViewModel->getCurrencies() as $code => $currency) {
+foreach ($currencies as $code => $currency) {
     $name = $currency['name'];
     $symbol = $currency['symbol'];
     $options[] = [
         'value' => $escaper->escapeHtml($code),
-        'label' => $escaper->escapeHtml("$name | $code ($symbol)"),
+        'label' => [$escaper->escapeHtml($name), $symbol ? "$code ($symbol)" : $code],
         'on_click' => "hyva.postForm({$currencyViewModel->getSwitchCurrencyPostData($code)})"
     ];
 }
 
-$template
-    ->setData([
-        'id' => 'currency-selector',
-        'label' => $escaper->escapeHtml($currencyViewModel->getCurrentCurrencyCode()),
-        'withSearch' => true,
-        'options' => $options,
-    ])
-    ->render('Magento_Theme::html/dropdown.phtml');
+$currentLabel = ($currencies[$currentCurrencyCode] ?? false) ?
+    $escaper->escapeHtml("{$currencies[$currentCurrencyCode]['name']} | {$currentCurrencyCode}") :
+    $escaper->escapeHtml($currentCurrencyCode);
 
 ?>
+
+<?php if($currencyViewModel->getCurrencyCount() > 1): ?>
+<div class="w-full sm:w-1/2 md:w-full pr-4">
+    <h2
+        id="currency-heading"
+        class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3 uppercase"
+    >
+        <?= $escaper->escapeHtml(__('Currency')) ?>
+    </h2>
+
+    <?=
+    $template
+        ->setData([
+            'id' => 'currency-selector',
+            'label' => $currentLabel,
+            'options' => $options,
+            'currentValue' => $currentCurrencyCode,
+            'withSearch' => true,
+        ])
+        ->render('Magento_Theme::html/dropdown.phtml');
+    ?>
+</div>
+<?php endif; ?>
