INTERNAL-46: Implement forgot password error messages using controller Also refactored Athentication.ts to make it work with both login and forgot password pages

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
@@ -38,8 +38,9 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                   method="post"
                   class="w-full"
                   id="<?= $escaper->escapeHtmlAttr($formId) ?>"
-                  x-data="initPasswordForm()"
-                  @submit.prevent="submitForm();">
+                  x-data="Authentication('<?= $escaper->escapeHtmlAttr($formId) ?>')"
+                  @submit.prevent="submitForm"
+            >
                 <?= $block->getBlockHtml('formkey') ?>
                 <input type="hidden" name="formId" value="<?= $escaper->escapeHtmlAttr($formId) ?>"/>
                 <?= $block->getChildHtml('form_fields_before') ?>
@@ -65,6 +66,8 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                                    value="<?= $escaper->escapeHtmlAttr($block->getEmailValue()) ?>">
                         </div>
                     </div>
+                    <p class="text-red-600 mt-2" x-show="errorMessages.username"
+                       x-text="errorMessages.username"></p>
                     <?= $block->getChildHtml('form_additional_info') ?>
                     <?= $recaptcha ? $recaptcha->getLegalNoticeHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_FORGOT_PASSWORD) : '' ?>
                 </fieldset>
@@ -86,19 +89,3 @@ $recaptcha = $block->getData('viewModelRecaptcha');
         </div>
     </div>
 </div>
-<script>
-    function initPasswordForm() {
-        return {
-            errors: 0,
-            hasCaptchaToken: 0,
-            submitForm() {
-                const $form = document.querySelector('#<?= $escaper->escapeJs($formId) ?>');
-                <?= $recaptcha ? $recaptcha->getValidationJsHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_FORGOT_PASSWORD) : '' ?>
-
-                if (this.errors === 0) {
-                    $form.submit();
-                }
-            }
-        }
-    }
-</script>
