--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
@@ -47,8 +47,8 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                 <?= $recaptcha ? $recaptcha->getInputHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_FORGOT_PASSWORD) : '' ?>
                 <fieldset class="fieldset">
                     <div class="flex w-full flex-col items-center">
-                        <h2 class="font-bold text-lg">Reset your password</h2>
-                        <h5 class="mt-3">We will send you an email to reset your password</h5>
+                        <h2 class="font-bold text-xxl">Reset your password</h2>
+                        <h5 class="mt-3 text-[14px] text-[#797979]">We will send you an email to reset your password</h5>
                     </div>
                     <div class="field email required mt-6">
                         <label for="email_address" class="label hidden">
