INTERNAL-58: Remove ProductDetail block and change styles of card At this moment of time we don't need ProductDetail block because pricing will go to other template and at this point we leave it's logic how it is in template

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item.phtml
@@ -75,7 +75,7 @@ else{
 >
 
     <a
-        class="group relative flex min-w-0 rounded-md justify-center h-[521px]"
+        class="group relative flex min-w-0 rounded-md justify-center"
         <?php if ($isAlpineTemplate) : ?>
             :href="product.url"
             x-element-transition-trigger:product<?= $isSearchCard ? '' : '.preview' ?>.animate="
