--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_list_item.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_list_item.xml
@@ -5,9 +5,7 @@
         <referenceBlock name="product_list_item">
             <!-- <block class="Magento\Catalog\Block\Category\View"  name="product.card.details" template="Magento_Catalog::product/list/item-details-article.phtml" /> -->
             <!-- Idk what difference does it make but Magento\Catalog\Block\Category\View throws  `Call to a member function getIdentities() on null` -->
-            <!--            <block class="Magento\Framework\View\Element\Template"  name="product.card.details" template="Magento_Catalog::product/list/item-details-article.phtml" />-->
-            <block class="Satoshi\Theme\Block\ProductDetails" name="product.card.details"
-                   template="Magento_Catalog::product/list/item-details-article.phtml"/>
-        </referenceBlock>
+            <block class="Magento\Framework\View\Element\Template"  name="product.card.details" template="Magento_Catalog::product/list/item-details-article.phtml" />
+referenceBlock>
     </body>
 </page>
