--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
@@ -21,11 +21,16 @@ $isAlpineTemplate = $block->getData('isAlpineTemplate');
 $showAddToWishlist = $wishlistViewModel->isEnabled();
 $objectManager = ObjectManager::getInstance();
 
-
 if (!$isAlpineTemplate) {
     $product = $block->getData('product');
     $featuredImage = $product?->getImage();
     $title = $product?->getName();
+
+    echo '<pre>';
+    var_dump($product->getData());
+    echo '</pre>';
+
+    //TODO: Remove object manager and move to price template
     $storeManager = $objectManager->get('\Magento\Store\Model\StoreManagerInterface');
 
     //format a price
@@ -147,7 +152,7 @@ if (!$isAlpineTemplate) {
         >
             <?= $hyvaicons->renderHtml('cart'); ?>
         </button>
-
+        <?php // TODO: Create and implement price component ?>
         <?= ''
         // $template
         //   ->setData(['isAlpineTemplate' => true])
